src/test/deca/context/valid/protected_subclass.deca

class A {
    protected int x = 1;
}

class B extends A {
    int meth() {
        return this.x;
    }
}

{
    B b = new B();
    println(b.meth());
}
