src/test/deca/context/invalid/nbr_par_invalide.deca
// Description :
// nb d'args invalide
//
// Resultats :
// Echec
class Passeur {
    int passe(int a, int b) { return a + b; }
}
{
    Passeur pedri;
    pedri = new Passeur();
    println(pedri.passe(10));
}


